# forum

./: .gitignore  README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  compose.override.yml  compose.yml  entrypoint.sh  pyproject.toml
backend/forum/: api.py  config.py  main.py  schemas.py
backend/forum/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/forum/cache/: core.py  repository.py
backend/forum/category/: exceptions.py  models.py  router.py  schemas.py  service.py
backend/forum/dashboard/: router.py  schemas.py  service.py
backend/forum/database/: core.py
backend/forum/forum/: exceptions.py  models.py  router.py  schemas.py  service.py
backend/forum/post/: exceptions.py  models.py  router.py  schemas.py  service.py
backend/forum/thread/: exception.py  models.py  router.py  schemas.py  service.py
backend/migrations/: README  env.py
backend/migrations/versions/: 2026-02-11_d916ec0b3479.py  2026-02-14_f4b619b72c1a.py  2026-02-15_3324c85ad4ed.py  2026-02-15_ca880a2b175c.py  2026-02-16_0d91893c9644.py  2026-02-16_d5f18fe43d8f.py  2026-02-16_fdbfa4b7600c.py  2026-02-17_8cb1cfde1fb8.py  2026-02-18_7dab60b96629.py  2026-02-18_da0517b6fe68.py
backend/scripts/: populate_forum.py
backend/tests/: conftest.py
backend/tests/auth/: test_unit.py
backend/tests/cache/: test_unit.py
backend/tests/category/: test_unit.py
backend/tests/forum/: test_unit.py
backend/tests/thread/: test_unit.py
frontend/: index.html
(+24 files in other folders)
