[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.128.7",
    "psycopg[binary]>=3.3.2",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.46",
]
